testsuite/tests/parser/should_fail/ParserNoBinaryLiterals1.stderr

ParserNoBinaryLiterals1.hs:5:1: error:
    equations for ‘f’ have different numbers of arguments
      ParserNoBinaryLiterals1.hs:5:1-10
      ParserNoBinaryLiterals1.hs:6:1-10
